--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>saleh soft </title>
     <meta charset="UTF-8">
     <meta name="description" content="موقع شخصي ">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
